# meet-rosa

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
config/: confidential_domains.example.yaml  config.example.yaml  imap_accounts.example.yaml  morning_extras.example.yaml  okrs.example.yaml  settings.example.yaml  slack_workspaces.example.yaml  tenders.example.yaml  uptime.example.yaml  user_profile.example.yaml  vip_contacts.example.yaml
docs/: AGENT_SPEC.md  AGENT_SPEC_EXTENSIONS.md  BYOC.md  CHANGELOG.md  DESIGN.md  FAQ.md  HYBRID_ARCHITECTURE.md  INSTALL.md  PRIVACY_LAYER.md  QUICKSTART.md  ROADMAP_2026.md  STATUS.md  SUB_PROCESSORS.md  TROUBLESHOOTING.md  UPGRADING.md  UPTIME_NTFY_SETUP.md
scripts/: auto_learn_vendor_strategies.py  backfill_slack_user_names.py  check_location.py  enrich_vip_names.py  expenses_export.py  historical_backfill.py  historical_index.py  imap_account.py  import_english_collocations.py  import_familybedrijven.py  import_vendor_strategies_from_xlsx.py  install_launchagent.sh  purge_person.py  reclassify_sales_sectors.py  request_invoice_pdf.py  rosa  rosa.plist.template  run_receipt_collection.py  security_audit.sh  send_briefing_now.py  send_dayclose_now.py  send_receipt_run_email.py  setup_google_oauth.py  slack_workspace.py  todoist_relabel_duplicates.py  uptime_silence.py  verify_vendor_email_hints.py
src/: main.py
tests/: test_audit.py  test_birthdays.py  test_briefings.py  test_calendar_recurrence.py  test_classifier.py  test_cli.py  test_code_review_3_fixes.py  test_code_review_4_fixes.py  test_comm_schema.py  test_comm_summarize.py  test_comm_tools.py  test_config_wishes.py  test_config_wishes_audit.py  test_cost_tracker_and_graceful_degradation.py  test_current_date_state_line.py  test_dashboard.py  test_dashboard_imap.py  test_dashboard_projects.py  test_dashboard_vendors_runs.py  test_db_retention.py  test_decisions.py  test_delegations.py  test_duplicate_scan.py  test_english_practice.py  test_english_reminder.py  test_expenses.py  test_first_boot_and_quick_commands.py  test_fresh_install_e2e.py  test_gateway.py  test_gmail_source_archive.py  test_health.py  (+72 more)
(+240 files in other folders)
